[gd_scene load_steps=2 format=3 uid="uid://cm84qklaikra"]

[ext_resource type="Script" uid="uid://dg5jslrc3lb41" path="res://scripts/ui/TowerActionUI.gd" id="1_kmjp4"]

[node name="TowerActionUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_kmjp4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 122.0
offset_bottom = 94.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UpgradeButtonA" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Upgrade"

[node name="UpgradeButtonB" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Upgrade"

[node name="CostLabelA" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Upgrade Cost: 0"

[node name="CostLabelB" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Upgrade Cost: 0"

[node name="SellButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Sell"

[connection signal="pressed" from="Panel/VBoxContainer/UpgradeButtonA" to="." method="_on_upgrade_button_a_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/UpgradeButtonB" to="." method="_on_upgrade_button_b_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SellButton" to="." method="_on_sell_button_pressed"]
